--- a/src/main/resources/langs/en.yml
+++ b/src/main/resources/langs/en.yml
@@ -1,3 +1,3 @@
 reload:
   usage: "&#47add9Usage: &#71d7c6/pxemoji reload"
-  completed: "&#3bed85pxEmoji » &#71d7c6Configs have been reloaded"
+  completed: "&#3bed85pxEmoji » &#71d7c6Configs have been reloaded. Rejoin for update emojilist"
