--- a/src/main/resources/langs/ru.yml
+++ b/src/main/resources/langs/ru.yml
@@ -1,3 +1,3 @@
 reload:
   usage: "&#47add9Используй: &#71d7c6/pxemoji reload"
-  completed: "&#3bed85pxEmoji » &#71d7c6Конфиги перезагружены"
+  completed: "&#3bed85pxEmoji » &#71d7c6Конфиги перезагружены. Перезайдите на сервер"
